# deli-worker

./: .env-sample  .travis.yml  Dockerfile  README.md  README.rst  docker-entrypoint.sh  requirements.txt  setup.cfg  tox.ini
deli_worker/: main.py  settings.py
