[metadata]
name = deli-worker
author = Ryan Belgrave
author-email = rmb1993@gmail.com
summary = Worker for Sandwich Cloud
description-file = README.rst
home-page = https://github.com/sandwichcloud/deli-worker
license = MIT
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    deli_worker

[entry_points]
console_scripts =
    deli_worker = deli_worker.main:main

[pbr]
skip_authors = 1
skip_changelog = 1